[gd_scene load_steps=2 format=3 uid="uid://bobget6rcwck1"]

[ext_resource type="Script" uid="uid://dgtmrmxiqn7tt" path="res://scenes/gameManager.gd" id="1_bdh1m"]

[node name="manager" type="Node2D"]
script = ExtResource("1_bdh1m")

[node name="gameTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="spawnTimer" type="Timer" parent="."]

[node name="bigGuyTimer" type="Timer" parent="."]

[connection signal="timeout" from="gameTimer" to="." method="_game_loop"]
[connection signal="timeout" from="spawnTimer" to="." method="_spawn_timer_timeout"]
[connection signal="timeout" from="bigGuyTimer" to="." method="_big_guy_timer_timeout"]
